# koopa-ext

./: Cargo.toml  dummy.rs  fix_mem2reg.sh  readme.md  test_koopa.rs
src/: dbg.rs  ext.rs  lib.rs  utils.rs
src/analysis/: constant_fold.rs  memory_ssa.rs  mod.rs
src/graph/: dom_tree.rs  graph.rs  graphviz.rs  loops.rs  mod.rs  reachable.rs  scalar_evolution.rs  terminator.rs  traverse.rs
src/passes/: dce.rs  gvn.rs  inline.rs  licm.rs  loop_unroll.rs  mem2reg.rs  mod.rs  print_ir.rs  sccp.rs  simplify_cfg.rs  simplify_loop.rs
