[package]
name = "koopa-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.13"
koopa = "0.0.9"
rustc-hash = "2.1"
smallvec = "1.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

[dev-dependencies]
koopa = "0.0.9"
petgraph = "0.8.3"
rand = "0.10"
