[package]
name = "koopa-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.13"
koopa = { git = "https://github.com/hsqStephenZhang/koopa.git", rev = "50464a19d2ce8e1374b3c9a50ebd2dc2406f1e8d"}
rustc-hash = "2.1"
smallvec = "1.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

[dev-dependencies]
koopa = { git = "https://github.com/hsqStephenZhang/koopa.git", rev = "50464a19d2ce8e1374b3c9a50ebd2dc2406f1e8d"}
petgraph = "0.8.3"
rand = "0.10"
